# zmk

./: .gitignore  rit
app/: CMakeLists.txt  Kconfig  king.patch  poke.patch  prj.conf  suits.patch  suitsquare.patch
app/boards/: native_posix_64.overlay
app/boards/arm/corne-ish_zen/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  corne-ish_zen.dtsi  corne-ish_zen.keymap  corne-ish_zen.yaml  corne-ish_zen_5col.keymap  corne-ish_zen_left.dts  corne-ish_zen_left_defconfig  corne-ish_zen_right.dts  corne-ish_zen_right_defconfig  custom_status_screen.c
app/boards/arm/corne-ish_zen/8bit/: CMakeLists.txt  cards_images.c  status_screen.c
app/boards/arm/corne-ish_zen/widgets/: CMakeLists.txt  battery_status.c  layer_status.c  output_status.c
app/boards/arm/corne-ish_zen/widgets/icons/: CMakeLists.txt  king.c  pika.c  poke.c  suits.c  suitsquare.c
app/boards/arm/corneish_zen/: CMakeLists.txt  Kconfig.defconfig  corneish_zen.dtsi  (+4 more)
app/drivers/display/: Kconfig  il0323.c
app/dts/: behaviors.dtsi
app/include/zmk/: hid.h  hog.h  keymap.h
app/src/: battery.c  ble.c  conditional_layer.c  endpoints.c  hid.c  hid_listener.c  hog.c  keymap.c
app/src/behaviors/: behavior_hold_tap.c  behavior_key_repeat.c  behavior_momentary_layer.c  behavior_smart_interrupt.c
app/src/display/: CMakeLists.txt  Kconfig  ffkb_fox_widget.c  ffkb_fox_widget.h  main.c  status_screen.c
app/tests/smart-interrupt/: behavior_keymap.dtsi
docs/: sidebars.js
docs/docs/: intro.md
docs/docs/behaviors/: hold-tap.md  smart-interrupt.md
docs/docs/config/: displays.md
(+26 files in other folders)
